# Image-Recognition-Watermarking

./: CMakeLists.txt
part1/: #makenrun.sh#  .Rhistory  DTwoDimArray.h  Makefile  SImage.h  SImageIO.h  makenrun.sh  makenrun.sh~  makenrun_add_wm.sh  makenrun_add_wm.sh~  makenrun_check_wm.sh  makenrun_check_wm.sh~  makenrun_noise.sh  makenrun_specto.sh  makenrun_specto.sh~  watermark  watermark.cpp
part2/: detect  detect.cpp
